--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ jobs:
   build:
     strategy:
       matrix:
-        node-version: [8.x, 10.x, 12.x]
+        node-version: [8.12.0, 10.x, 12.x]
         os: [ubuntu-latest, windows-latest]
 
     runs-on: ${{ matrix.os }}
